# freeling-nodejs-addon

./: .gitignore  .gitignore.save  CMakeLists.txt  CMakeLists.txt.orig  README.md  async_pattern.cpp  index.js  node_instr.txt  package.json
addon/: .gitignore  CMakeLists.txt  Dockerfile  package-lock.json  package.json
addon/freeling/: freeling.js
addon/freeling/classes/: HmmTagger.js  Morfo.js  Splitter.js  Tokenizer.js
addon/include/: hmm_tagger.h  morfo.h  sentence.h
addon/src/: main.cpp  morfo.cpp  splitter.cpp
addon/test/: errors.js  test_HmmTaggerPerformance.js  test_Morfo.js  test_Sentence.js  test_Splitter.js  test_Tokenizer.js  test_hmmTaggerAnalyze.js  test_morfoPerformance.js  test_splitterPerformance.js  test_text.txt  test_tokenize.js  test_tokenizerPerformance.js  text1658tokens.txt  text8368tokens.txt  utils.js
addon/test/freelingSyncTest/: CMakeLists.txt  main.cpp
backend/: app.js  package-lock.json  package.json  start.js  test.json
backend/addon/: async_pattern.cpp  package-lock.json
backend/addon/freeling/classes/: Morfo.js  Splitter.js  Tokenizer.js
backend/addon/include/: word.h
backend/addon/src/: word.cpp
backend/addon/test/: test_Morfo.js
backend/controllers/: morfAnalyzerController.js  posTagger.js  posTaggerController.js
backend/routes/: index.js
backend/utils/: getSentences.js
backend/validators/: textValidator.js
examples/: pos_tagger.js  test_text.txt
freeling-demo/: package-lock.json  package.json
freeling-demo/public/: index.html
freeling-demo/src/: App.css  App.js  styles.css
freeling-demo/src/components/: Container.js  Controllers.js  OptionsContainer.js  OutputContainer.js
frontend/: package-lock.json  package.json
frontend/freeling-demo/: package-lock.json  package.json
frontend/freeling-demo/src/: styles.css
frontend/freeling-demo/src/components/: AnalysisDropDownMenu.js  (+9 more)
frontend/src/: styles.css
frontend/src/components/: AnalysisDropDownMenu.js  AnalyzeButton.js  AnalyzedSentence.js  AnalyzedWord.js  CheckBox.js  Container.js  Controllers.js  InputContainer.css  InputContainer.js  LoadingSpinner.css  LoadingSpinner.js  OptionsContainer.js  OutputContainer.js  TagAnnotation.js
include/: addon_errors.h  addon_utils.h  addon_utils.h.orig  analysis.h  hmm_tagger.h  morfo.h  pos_tagger.h  sentence.h  splitter.h  stringconvert.h  tokenizer.h  whole.h  word.h  word.h.orig
src/: addon_utils.cpp  analysis.cpp  async_splitter.cpp  hmm_tagger.cpp  main.cpp  main.cpp.orig  morfo.cpp  sentence.cpp  splitter.cpp  splitter.cpp.autosave  stringconvert.cpp  tokenizer.cpp  whole.cpp  whole.cpp.autosave  word.cpp  word.cpp.orig
test/: errors.js  run_Tokenizer.js  run_Word.js  test_Analysis.js  test_HmmTagger.js  test_Morfo.js  test_Splitter.js  test_Tokenizer.js  test_Word.js  test_morfoAnalyze.js  test_split.js  test_text.txt
